# szl

./: Interpreting_the_Data.md  Makefile.in  Overview.md  ProjectHome.md  Sawzall_Performance_Tips.md  Sawzall_Proto_Translation.md  Sawzall_Table_Types.md  Sawzall_Undef_Notes.md  config.h.in  configure  configure.ac
doc/: docstyle.css  guidestyle.css  sawzall-intrinsics.html  sawzall-language.html  sawzall-spec.html  sawzall-style-guide.html
doc/sawzall-spec.html/: sawzall-spec.html
src/: Makefile.am  Makefile.in
src/app/: printemitter.cc  printemitter.h  szlutils.cc  szlutils.h
src/emitters/: szlbootstrapsum.cc  szlcollection.cc  szlcomputeinversehistogram.cc  szlcomputequantiles.cc  szlheap.h  szlmaximumresults.cc  szlmrcounter.cc  szlquantile.cc  szlquantile_performance.cc  szlrecordio.cc  szlsample.cc  szlset.cc  szlsketch.cc  szlsketch.h  szltop.cc  szltopheap.cc  szltopresults.cc  szlunique.cc  szlweightedsample.cc  szlweightedsampleadapter.cc  szlweightedsampleadapter.h  weighted-reservoir-sampler-impl.cc  weighted-reservoir-sampler-impl.h
src/emitters/tests/: szlcollection_unittest.cc  szldistinctsample_unittest.cc  szlmaximum_unittest.cc  szlquantile_regtest.cc  szlquantile_unittest.cc  szlrecordio_unittest.cc  szlsample_unittest.cc  szlset_unittest.cc  szlsum_unittest.cc  szltop_unittest.cc  szlunique_unittest.cc
src/emitvalues/: sawzall.pb.cc  sawzall.proto  szlemitter.cc  szlencoding.h  szlresults.cc  szlvalue.cc  szlxlate.cc  szlxlate.h
src/engine/: analyzer.h  assembler.cc  assembler.h  code.cc  code.h  codegenutils.cc  compiler.h  convop.cc  convop.h  debugger.h  elfgen.h  engine.cc  engine.h  error.cc  factory.cc  fieldreferences.cc  form.cc  form.h  globals.cc  globals.h  help.cc  help.h  ir.cc  linecount.cc  map.cc  memory.cc  nativecodegen.cc  nativesupport.cc  opcode.cc  opcode.h  outputter.cc  outputter.h  parser.cc  printvisitor.cc  printvisitor.h  proc.cc  proc.h  propagatevalues.cc  protocolbuffers.cc  protocolbuffers.h  (+14 more)
src/engine/language_tests/: update
src/engine/language_tests/base/: arith.out  array.szl  arrayadd.out  arrayconv.szl  arrayconv1.err  arrayconv2.err  arrayconv2.szl  arraymapconv.sh  assert.err  assert.out  assert.szl  baddefness.err  baddefness.szl  badfunstaticvars.szl  badfunvars.err  badinc.err  badinc.szl  badindex2.err  badlit.szl  badnew2.err  badout.szl  badprint.szl  bytes.szl  comment.out  comment.szl  compare.out  compare.szl  composites.out  condops.szl  constantfolding.err  constantfolding.szl  constantfolding2.out  constantfolding2.szl  constantfolding3.out  conv.out  (+166 more)
src/engine/tests/: assembler_unittest.cc  elfgen_unittest.cc  error_handler_unittest.cc  szl_variable_inode_test.sh  utils_test.cc  val_unittest.cc
src/fmt/: LICENSE  dofmt.cc  fltfmt.cc  fmt.cc  fmt.h  fmtlocale.cc  fmtrune.cc  fmtstr.cc  nan.h  pow10.cc  print.3  runes.h  runeseprint.cc  runesmprint.cc  runesprint.cc  runevsmprint.cc  runevsnprint.cc  snprint.cc  vsnprint.cc
src/fmt/tests/: fltfmt_unittest.cc  fmt_test.cc
src/intrinsics/: mathintrinsic.cc  ziplib.cc
src/protoc_plugin/: circularity_detector-inl.h  circularity_detector.h  strutil.h  topologicalsorter-inl.h
src/public/: hash_map.h  hash_set.h  porting.h  szlresults.h  szltabentry.h  value.h  varint.h
src/utilities/: acmrandom.cc  logging.cc  lzw.cc  lzw.h  mt_random.cc  quotefmt.cc  random_base.cc  random_base.h  recordio.cc  strutils.cc  strutils.h  sysutils.cc  szlmutex.cc  szlmutex.h  timeutils.h  zlibwrapper.h
trunk/: COPYING  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  svn-commit.tmp
trunk/src/: Makefile.am  Makefile.in
trunk/src/app/: printemitter.cc  szl.cc  szlemitterfactory.cc  szlemitterfactory.h
trunk/src/emitters/: szlbootstrapsum.cc  szlbootstrapsumresults.cc  szlcollectionresults.cc  szldistinctsample.cc  szldistinctsampleresults.cc  szlheap.cc  szlmaximum.cc  szlmrcounter.cc  szlquantile.h  szlquantileresults.cc  szlsampleresults.cc  szlsetresults.cc  szlsum.cc  szlsumresults.cc  szltext.cc  szltopheap.h  szltopresults.cc  szluniqueresults.cc  szlweightedsampleresults.cc  weighted-reservoir-sampler.h
trunk/src/emitvalues/: sawzall.pb.h  szldecoder.cc  szlencoder.cc  szlresults.cc  szltabentry.cc  szltype.cc  szlvalue.cc  szlxlate.cc
trunk/src/engine/: analyzer.cc  backendtype.cc  backendtype.h  closurecheck.cc  codegen.cc  codegen.h  codegenutils.h  compiler.cc  constantfolding.cc  constantfolding.h  debugger.cc  elfgen.cc  error.h  factory.h  frame.cc  frame.h  gctrigger.cc  gctrigger.h  globals.h  histogram.cc  histogram.h  intrinsic.cc  intrinsic.h  ir.h  linecount.h  map.h  memory.cc  memory.h  nativecodegen.h  nativesupport.h  node.cc  node.h  parser.cc  parser.h  profile.cc  profile.h  regsstate.cc  rewriteasserts.cc  sawzall.cc  scanner.cc  (+8 more)
trunk/src/fmt/: README.google  charstod.cc  errfmt.cc  fltfmt.cc  fmtdef.h  fmtfd.cc  fmtfdflush.cc  fmtinstallflag.3  fmtprint.cc  fmtquote.cc  fmtvprint.cc  fprint.cc  nan64.cc  print.cc  runefmtstr.cc  runes.cc  runesnprint.cc  runevseprint.cc  seprint.cc  smprint.cc  sprint.cc  strtod.cc  strtod.h  vfprint.cc  vseprint.cc  vsmprint.cc
trunk/src/intrinsics/: additionalinputintrinsic.cc  dbintrinsic.cc  inprotocount.cc  miscintrinsic.cc  sortintrinsic.cc
trunk/src/protoc_plugin/: linked_ptr.h  proto-sorter.cc  proto-sorter.h  strutil.cc  szl_generator.cc  szl_generator.h  szl_plugin.cc  topologicalsorter.h
trunk/src/public/: commandlineflags.h  emitterinterface.h  hashutils.h  logging.h  nullemitter.h  porting.h  recordio.h  sawzall.h  szldecoder.h  szlemitter.h  szlencoder.h  szlnamedtype.h  szltype.h  szlvalue.h
trunk/src/utilities/: acmrandom.h  commandlineflags.cc  commandlinehelpflags.cc  dbutils.h  gzipwrapper.cc  gzipwrapper.h  hashutils.cc  mt_random.h  port_ieee.h  quotefmt.h  strtotm.cc  strtotm.h  sysutils.cc  sysutils.h  timeutils.cc  varint.cc  zlibwrapper.cc
wiki/: Interpreting_the_Data.wiki  Overview.wiki  Sawzall_Performance_Tips.wiki  Sawzall_Proto_Translation.wiki  Sawzall_Table_Types.wiki  Sawzall_Undef_Notes.wiki
(+792 files in other folders)
